--- a/Proyecto_MedeINN/appsettings.json
+++ b/Proyecto_MedeINN/appsettings.json
@@ -6,5 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": { "MySQLConnection": "server=localhost;port=3306;database=sensordb;uid=root;password=Nagato125." }
+  "ConnectionStrings": {
+    "MySQLConnection": "server=localhost;port=3306;database=sensordb;uid=root;password=Nagato125.",
+   // "MySQLConnection": "server=192.168.1.253;port=3306;database=ts_sensores;uid=usr_dane;password=Cambiar123$$"
+  }
+
 }
